--- a/NW-1-Front/src/assets/main.css
+++ b/NW-1-Front/src/assets/main.css
@@ -7,6 +7,8 @@
     margin: 0;
 }
 
-body {
-
+@font-face {
+    font-family: "Comodo Regular";
+    src: url('../../fonts/Comodo-Regular.ttf');
+    font-display: auto;
 }
